--- a/index.html
+++ b/index.html
@@ -141,17 +141,9 @@
             <div>
                 <!--        peculiarities-->
                 <div style="margin-top: 30px">
-                    <h2 class="section_title">Трудоустройство</h2>
+                    <h2 class="section_title">Особенности подготовки</h2>
                     <p class="section_text">
-                        Выпускники владеют современными компьютерными информационными технологиями и имеют базовые
-                        знания в
-                        производственных процессах в геологии и нефтегазовой отрасли. Очень высокий спрос на таких
-                        специалистов
-                        на предприятиях нефтегазовой отрасли как российских (ПАО «НК Роснефть», ПАО Газпром, ПАО ЛУКойл,
-                        ПОА
-                        «Сибур Холдинг» и др.), так и зарубежных (Sclimberger, CGG, Landmark и др.). Так же наши
-                        выпускники
-                        легко находят применение в любой отрасли народного хозяйства (промышленность, бизнес,…).
+                        Дополнительно к требованиям Федерального Государственного образовательного стандарта наряду с современными информационными технологиями предусматривается подготовка в таких областях как:создание информационных технологий в геологии и нефтегазодобыче ,эксплуатация современных систем обработки, моделирования и интерпретации геолого-геофизической и промысловой информации,разработка методов и средств обработки и хранения геолого-геофизической информации.
                     </p>
                 </div>
 
