--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             color: #000000;
             width: max-content;
         }
+        .icon_work {
+            margin: 0 10px;
+        }
     </style>
 </head>
 <body>
@@ -121,12 +124,12 @@
             <div id="partners">
                 <!--        companies-->
                 <div id="companies">
-                    <div><img src="assets/imgs/2135106%201.svg"></div>
-                    <div><img src="assets/imgs/1636106091_1-papik-pro-p-logotip-lukoil-foto-1%201.svg"></div>
-                    <div><img src="assets/imgs/1636087434_3-papik-pro-p-gazprom-logotip-foto-4%201.svg"></div>
-                    <div><img src="assets/imgs/1636157933_7-papik-pro-p-sibur-logotip-foto-8%201.svg"></div>
-                    <div><img src="assets/imgs/rusneft.svg"></div>
-                    <div><img src="assets/imgs/schlumberger%201.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/2135106%201.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/1636106091_1-papik-pro-p-logotip-lukoil-foto-1%201.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/1636087434_3-papik-pro-p-gazprom-logotip-foto-4%201.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/1636157933_7-papik-pro-p-sibur-logotip-foto-8%201.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/rusneft.svg"></div>
+                    <div class="icon_work"><img src="assets/imgs/schlumberger%201.svg"></div>
                 </div>
                 <!--        carusel-->
                 <div class="my-slider">
