--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                     <div class="icon_work"><img src="assets/imgs/schlumberger%201.svg"></div>
                 </div>
                 <!--        carusel-->
-                <div class="my-slider">
-                    <div><img src="assets/imgs/s1.png"></div>
-                    <div><img src="assets/imgs/s2.png"></div>
-                    <div><img src="assets/imgs/s1.png"></div>
-                    <div><img src="assets/imgs/s2.png"></div>
-                    <div><img src="assets/imgs/s1.png"></div>
-                    <div><img src="assets/imgs/s2.png"></div>
+                <div class="my-slider" style="display: flex; max-height: min-content; height: 380px;">
+                    <img style="object-fit: fill;" src="assets/imgs/s1.png">
+                    <img style="object-fit: fill;" src="assets/imgs/s2.png">
+                    <img style="object-fit: fill;" src="assets/imgs/s3.jpeg">
+                    <img style="object-fit: fill;" src="assets/imgs/s4.jpeg">
+                    <img style="object-fit: fill;" src="assets/imgs/s5.jpeg">
+                    <img style="object-fit: fill;" src="assets/imgs/s6.jpeg">
                 </div>
             </div>
             <div>
@@ -181,6 +181,7 @@
         autoplayButtonOutput: false,
         nav: false,
         autoWidth: true,
+        height: 380,
         responsive: {
             640: {
                 edgePadding: 20,
